--- a/ERPSystemMVCApp/ERPSystemMVCApp.csproj
+++ b/ERPSystemMVCApp/ERPSystemMVCApp.csproj
@@ -189,9 +189,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\UniqueEmailValidation.cs" />
-    <Compile Include="Models\UniqueUsernameValidation.cs" />
-    <Compile Include="Models\UserCreateUserModel.cs" />
+    <Compile Include="Models\RegionCreateRMModel.cs" />
+    <Compile Include="Models\BranchCreateRMModel.cs" />
     <Compile Include="Models\UserLoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -251,10 +250,12 @@
     <Content Include="Views\Shared\_SideMenu.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\RegionalManager\CreateBranch.cshtml" />
+    <Content Include="Views\RegionalManager\CreateRegion.cshtml" />
+    <Content Include="Views\RegionalManager\ShowAllBranch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\RegionalManager\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
